# rocmtests

cmatest/: CMakeLists.txt  cmatest.c
common/: roctb.c  roctb.h
rocmmpi/: CMakeLists.txt  readme.md  rocmmpi.c
